--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@babel/cli": "^7.8.4",
     "@babel/core": "7.9.0",
     "@babel/helper-builder-react-jsx": "7.9.0",
+    "@babel/preset-env": "^7.9.5",
     "@babel/preset-typescript": "^7.9.0",
     "babel-jest": "^25.3.0",
     "babel-plugin-tester": "^9.0.1",
