--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
 language: node_js
 node_js:
   - 12
+script:
+  - npm run test:coverage
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
