--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "babel src -d lib --extensions '.ts'",
     "test": "jest test/",
     "test:watch": "npm run test -- --watch",
-    "test:coverage": "npm run jest -- --coverage",
+    "test:coverage": "npm run test -- --coverage",
     "prepublishOnly": "npm run clean && npm run build"
   },
   "license": "MIT",
