--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "clean": "rm -rf lib",
     "build": "babel src -d lib --extensions '.ts'",
     "test": "jest test/",
+    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand",
     "test:watch": "npm run test -- --watch",
     "test:coverage": "npm run test -- --coverage",
     "prepublishOnly": "npm run clean && npm run build"
@@ -25,22 +26,22 @@
     "tagged templates"
   ],
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.8.3",
-    "@babel/plugin-syntax-jsx": "^7.8.3",
-    "@babel/plugin-transform-classes": "^7.9.5",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-syntax-jsx": "^7.10.4",
+    "@babel/plugin-transform-classes": "^7.10.4",
     "core-js": "^3.6.5"
   },
   "peerDependencies": {
     "@babel/core": "^7.0.0-0"
   },
   "devDependencies": {
-    "@babel/cli": "^7.8.4",
-    "@babel/core": "7.9.0",
-    "@babel/helper-builder-react-jsx": "7.9.0",
-    "@babel/preset-env": "^7.9.5",
-    "@babel/preset-typescript": "^7.9.0",
-    "babel-jest": "^25.3.0",
-    "babel-plugin-tester": "^9.0.1",
-    "jest": "^25.3.0"
+    "@babel/cli": "^7.10.5",
+    "@babel/core": "^7.11.0",
+    "@babel/helper-builder-react-jsx": "^7.10.4",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-typescript": "^7.10.4",
+    "babel-jest": "^25.5.1",
+    "babel-plugin-tester": "^9.2.0",
+    "jest": "^25.5.4"
   }
 }
