--- a/package.json
+++ b/package.json
@@ -26,22 +26,22 @@
     "tagged templates"
   ],
   "dependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-syntax-jsx": "^7.10.4",
-    "@babel/plugin-transform-classes": "^7.10.4",
-    "core-js": "^3.6.5"
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-syntax-jsx": "^7.12.13",
+    "@babel/plugin-transform-classes": "^7.13.0",
+    "core-js": "^3.9.1"
   },
   "peerDependencies": {
-    "@babel/core": "^7.0.0-0"
+    "@babel/core": "^7.13.10"
   },
   "devDependencies": {
-    "@babel/cli": "^7.10.5",
-    "@babel/core": "^7.11.0",
-    "@babel/helper-builder-react-jsx": "^7.10.4",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-typescript": "^7.10.4",
-    "babel-jest": "^25.5.1",
-    "babel-plugin-tester": "^9.2.0",
-    "jest": "^25.5.4"
+    "@babel/cli": "^7.13.10",
+    "@babel/core": "7.13.10",
+    "@babel/helper-builder-react-jsx": "^7.12.13",
+    "@babel/preset-env": "^7.13.10",
+    "@babel/preset-typescript": "^7.13.0",
+    "babel-jest": "^26.6.3",
+    "babel-plugin-tester": "^10.0.0",
+    "jest": "^26.6.3"
   }
 }
